# cargo-overstay

./: Cargo.toml  README.md
src/: cargo.rs  cleanup.rs  cleanup_tests.rs  cli.rs  config.rs  main.rs  paths.rs  purge.rs  shim.rs  size.rs  store.rs  style.rs  testutil.rs  trim.rs  workspace.rs
