[package]
name = "cargo-overstay"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Reclaims disk from Rust build artifacts: a purge/ls CLI, plus an optional transparent cargo shim that caps target dir usage automatically"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lilienblum/cargo-overstay"
keywords = ["cargo", "cleanup", "disk", "build-artifacts", "target"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
